# Labs

./: .gitignore  Lab13_taks1.rar  Lab13_task2.rar  Lab13_task3.rar  gitignore_back.txt.gitignore  openGL clion cmake.txt
Graph/: CMakeLists.txt  Graph.cpp  Graph.h  draw.cpp  draw.h  main.cpp
Lab BST/: Menu.h  Tree.cpp  Tree.h  draw.h  main.cpp  Диаграмма без названия.drawio
Lab1/: CMakeLists.txt  calculation.cpp  calculation.h  main.cpp
Lab11/: CMakeLists.txt  main.cpp
Lab11_task1/: CMakeLists.txt  main.cpp
Lab11_task2/: CMakeLists.txt  Money.cpp  Money.h  main.cpp
Lab11_task3/: CMakeLists.txt  List.h  Money.cpp  Money.h  main.cpp
Lab11_task4/: CMakeLists.txt  Functions.h  main.cpp
Lab11_task5/: CMakeLists.txt  List.h  main.cpp
Lab12_task1/: CMakeLists.txt  main.cpp
Lab12_task2/: CMakeLists.txt  Functions.h  Money.cpp  Money.h  main.cpp
Lab12_task3/: CMakeLists.txt  List.h  Money.cpp  Money.h  main.cpp
Lab13_taks1/: CMakeLists.txt  Functions.h  Money.cpp  Money.h  main.cpp
Lab13_task2/: CMakeLists.txt  Functions.h  Money.cpp  Money.h  main.cpp
Lab13_task3/: CMakeLists.txt  Functions.h  Money.cpp  Money.h  main.cpp  main_back.cpp
Lab14/: CMakeLists.txt  Functions.h  main.cpp
Lab2/: CMakeLists.txt  main.cpp  vehicle.cpp  vehicle.h
Lab3/: CMakeLists.txt  money.cpp  money.h
Lab7/: CMakeLists.txt  List.h  List.inl  Money.cpp  Money.h  main.cpp
Lab8/: CMakeLists.txt  Dialog.cpp  Dialog.h  Event.h  Object.h  Person.cpp  Person.h  Student.cpp  Student.h  Tree.cpp  Tree.h  main.cpp
Lab9/: Error.h  (+4 more)
tests/untitled3/: CMakeLists.txt  main.cpp
(+196 files in other folders)
